name:               xmonad-utils
version:            0.1
homepage:           http://gorgias.mine.nu/xmonad-utils/
synopsis:           A Small Colletion of X Utilities
description: 	    A Small Colletion of X Utilities useful when running XMonad
category:           System
license:            BSD3
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unibz.it
build-depends:      base>=2.0, X11>=1.2.1, X11-extras>=0.2

executable:         hxsel
main-is:            hxsel.hs
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all
