name:               xmonad-utils
version:            0.1
homepage:           http://www.haskell.org/haskellwiki/Xmonad-utils
synopsis:           A small collection of X utilities
description: 	    A small collection of X utilities useful when
		    running XMonad. It includes: hxsel, which returns
		    the text currently in the X selection; hslock, a
		    simple X screen lock; hmanage: an utility to
		    toggle the override-redirect property of any
		    window; and hhp, a simple utility to hide the
		    pointer, similar to unclutter.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unibz.it
build-depends:      base>=2.0, X11>=1.2.1, X11-extras>=0.2, ghc>=6.6, unix

executable:         hxsel
main-is:            Hxsel.hs
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hslock
main-is:            Hslock.hs
other-modules:	    Hslock
extensions:         ForeignFunctionInterface
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -lcrypt -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hmanage
main-is:            Hmanage.hs
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hhp
main-is:            Hhp.hs
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         heval
main-is:            Heval.hs
Hs-Source-Dirs:     src/
ghc-options:        -funbox-strict-fields -O2 -fasm -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all
