name:               xmonad-utils
version:            0.1
homepage:           http://www.haskell.org/haskellwiki/Xmonad-utils
synopsis:           A small collection of X utilities
description:        A small collection of X utilities useful when
                    running XMonad. It includes: hxsel, which returns
                    the text currently in the X selection; hslock, a
                    simple X screen lock; hmanage: an utility to
                    toggle the override-redirect property of any
                    window; and hhp, a simple utility to hide the
                    pointer, similar to unclutter.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unibz.it
build-depends:      base>=2.0, X11>=1.3, ghc>=6.6, unix, random>=1.0

executable:         hxsel
main-is:            Hxsel.hs
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hxput
main-is:            Hxput.hs
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hslock
main-is:            Hslock.hs
extensions:         ForeignFunctionInterface
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -lcrypt -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hmanage
main-is:            Hmanage.hs
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         hhp
main-is:            Hhp.hs
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all

executable:         heval
main-is:            Heval.hs
hs-source-dirs:     src
ghc-options:        -funbox-strict-fields -O2 -Wall -optl-Wl,-s
ghc-prof-options:   -prof -auto-all
